ajsutes de documentacion
