# controllers/cliente.js
@@ -1,4 +1,5 @@
 const cliente = require('../model/cliente');
+const general = require('../model/general');
 
 const {
 	message
@@ -21,7 +22,6 @@ function getAll(req, res) {
 
 }
 
-
 function getOne(req, res) {
 
 	const id = req.params.id
@@ -39,7 +39,83 @@ function getOne(req, res) {
 
 }
 
+async function save(req, res){
+
+    const  id_cliente = await general.max('cliente', 'id_cliente');
+
+    const data = {
+        id_cliente: id_cliente,
+        nombre: req.body.nombre,
+        identificacion: req.body.identificacion
+    };
+
+    console.log('save cliente',data);
+
+    cliente.insert(data).then(reponse => {
+		if (reponse) {
+			return res.status(200).send({
+				success: true,
+				data: reponse
+			});
+		} else {
+			return res.status(200).send(message(false, 'no se encontraron registros'));
+		}
+	}).catch(error => {
+        return res.status(200).send(message(false, error));
+    });
+    
+
+}
+
+async function update(req, res){
+
+    const id = req.params.id;
+
+    const data = {
+        nombre: req.body.nombre
+    };
+
+    console.log('update cliente',data);
+
+    cliente.update(id, data).then(reponse => {
+		if (reponse) {
+			return res.status(200).send({
+				success: true,
+				data: reponse
+			});
+		} else {
+			return res.status(200).send(message(false, 'no se encontraron registros'));
+		}
+	}).catch(error => {
+        return res.status(200).send(message(false, error));
+    });
+    
+}
+
+async function destroy(req, res){
+
+    const id = req.params.id;
+
+    cliente.delete(id).then(reponse => {
+		if (reponse) {
+			return res.status(200).send({
+				success: true,
+				data: reponse
+			});
+		} else {
+			return res.status(200).send(message(false, 'no se encontraron registros'));
+		}
+	}).catch(error => {
+        return res.status(200).send(message(false, error));
+    });
+    
+}
+
+
 module.exports = {
     getAll,
-    getOne
+    getOne,
+    save,
+    update,
+    destroy
 }
